	* command.c: Removed casts on function pointer types.
	* util.h: Added const-preserving version of strstr().
	* util.c: Likewise.
	* find.c: Removed a function cast by using the wrapper function
	cstrstr().
	* filegui.c: Removed unnecessary function casts.
	* fileopctx.c: Likewise.
	* help.c: Removed function casts.
	* info.c: Removed function casts.

2005-05-22  Pavel Roskin  <proski@gnu.org>

	* view.c: Better fix for the gcc 4.0.0 warnings.  Fix callees
	rather than callers.

2005-05-21  Roland Illig  <roland.illig@gmx.de>

	* view.c: Made the F2 key action much simpler---now it just
	toggles between hexview and hexedit mode. Switching between text
	and hex mode can be done with <tab>, as before.
	* view.c: Renamed dpy_text_start to dpy_topleft, as it does not
	only apply to text mode. Renamed dpy_text_start_col to
	dpy_text_column. Renamed edit_cursor to hex_cursor, as it is
	used in hexview mode, too.
	* view.c (view_labels): Simplified the code that decides whether
	the user can switch to hexedit mode.
	* win.h: Removed a const qualifier from the type movefn, as these
	functions typically modify their object.
	* win.c: Likewise.

2005-05-20  Pavel Roskin  <proski@gnu.org>

	* find.c: Fix warnings reported by gcc 4.0.0.
	* mountlist.c: Likewise.
	* screen.c: Likewise.
	* view.c: Likewise.

	* dialog.c (dlg_select_widget): Remove first argument, it's
	redundant.  Adjust all callers.
	(dlg_replace_widget): Likewise.

2005-05-11  Roland Illig  <roland.illig@gmx.de>

	* charsets.c (translate_character): Fixed checking of the return
	value of iconv().

2005-05-10  Pavel Roskin  <proski@gnu.org>

	* .c: Sanitize all calls to functions from ctype.h.  Fix gcc 4.0
	warnings.

	* file.c: Remove unneeded WANT_WIDGETS.
	* layout.c: Likewise.
	* setup.c: Likewise.
	* view.c: Likewise.

2005-05-10  Roland Illig  <roland.illig@gmx.de>

	* find.c (find_parameters): Moved around and reordered dialog
	items to make their meaning clearer.
